--- a/index.html.j2
+++ b/index.html.j2
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html>
+<header><title>{{ websiteheader }}</title></header>
 <body>
+<h1>Welcome to {{ websiteheader }}</h1>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
+<h3>This site was created with Ansible by {{ websiteauthor }}
 
 </body>
 </html>
